Update about page

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -11,10 +11,10 @@
                 <h1 class="inset-text-grey">About</h1>
                 
                 <p class="lead">{{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>, 
-                is a platform for hosting experimental crowdsourcing projects aimed at making the diverse collections 
-                held at the <a href="http://www.bl.uk" target="_blank">British Library</a> more readily available
-                to a wider audience. By participating in the crowdsourcing projects here, you will have a direct impact on 
-                enabling future research at the Library.</p> 
+                is a platform for hosting experimental crowdsourcing projects aimed at improving access to the the diverse
+		collections held at the <a href="http://www.bl.uk" target="_blank">British Library</a>. By participating
+		in the crowdsourcing projects hosted here, you will have a direct impact on enabling future research at the
+		library.</p> 
             </div>
         </div>
     </section>
@@ -37,7 +37,9 @@
                 By participating you will have a direct impact on the availability of research material to anyone interested in the
                 diverse collections available at the British Library. </p>
                 
-                <p><a href="http://www.libcrowds.com/project/category/convert-a-card/">Let's get started</a>!</p>
+                <div class="text-center">
+		  <a href="http://www.libcrowds.com/project/category/convert-a-card/" class="btn btn-danger">Get Started</a>
+		</div>
             </div>
         </div>
     </section>
@@ -48,13 +50,11 @@
                 <h2>{{ _('Technology') }}</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
-                crowdsourcing projects. To complement the PyBossa framework, a custom Flask
-                <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugin</a> is used to handle certain {{brand}} specific
+                crowdsourcing projects. To complement the PyBossa framework, custom Flask
+                <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugins</a> are used to handle certain {{brand}} specific
                 features. The {{brand}} <a href="https://github.com/alexandermendes/libcrowds-pybossa-theme" target="_blank">theme</a> is written primarily
-                in HTML5, CSS3 and JavaScript, as are the individual crowdsourcing projects. Both the 
-                <a href="https://github.com/alexandermendes/libcrowds-pybossa-theme" target="_blank">theme</a> and
-                <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugin</a> are open-source and any
-                suggestions or contributions are welcome.</p>
+                in HTML5, CSS3 and JavaScript, as are the individual crowdsourcing projects. Everything developed for the LibCrowds platform
+		is open-source and <a href="https://github.com/LibCrowds" target="_blank">available at GitHub</a>.</p>
             
                 <div class="col-sm-6 col-sm-offset-3 col-xs-12 padding-top-sm">
                   <div class="col-xs-4"><img src="{{url_for('static',filename='img/html-logo.png')}}" class="img-responsive web-badge" alt="HTML5 web badge"></div>
@@ -71,8 +71,7 @@
                 <h2>{{ _('Contact information') }}</h2>
                 <ul>
                     <li>Visit the <a href="http://community.libcrowds.com">LibCrowds Community</a> for more information or to report any issues.</li>
-                    <li>Alternatively, you can email <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
-                    <li>Issues relating to the <a href="https://github.com/alexandermendes/libcrowds-pybossa-theme">LibCrowds theme</a> can also be raised via GitHub</li>         
+                    <li>Alternatively, you can email <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>         
                 </ul>
             </div>
         </div>
