Update project grid summary

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -175,7 +175,7 @@ p.score{margin-top:-20px;font-size:1.8em}
 i.fa-trophy{color:#FFC041}
 i.fa-users{color:#CF60C9}
 i.fa-tasks{color:#3A7BD2}
-i.fa-clock{color:#54BBBB}
+i.fa-clock-o{color:#54BBBB}
 i.fa-check-square-o{color:#15b592}
 h1 i,h2 i,h3 i{padding-right:10px}
 .description h3{margin-top:50px}
