--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -145,7 +145,7 @@
                     </div>
                     <hr class="small-margins">
                     <div class="vcenter ie-vcenter">
-                        <i class="fa fa-tasks fa-2x"></i><div class="padding-left-xs inline-block tasks-remaining" data-tasks="{{project.n_tasks}}" data-progress="{{ project.overall_progress | round | int }}">Tasks Remaining: {{project.n_tasks}}</div>
+                        <i class="fa fa-tasks fa-2x"></i><div class="padding-left-xs inline-block tasks-remaining" data-tasks="{{project.n_tasks}}" data-progress="{{ project.overall_progress | round | int }}">Tasks Remaining:</div>
                     </div>
                     <hr class="small-margins">
                     <div class="vcenter ie-vcenter">
