Small change in wording

--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -153,7 +153,7 @@
                     </div>
                     <hr class="small-margins">
                     <div class="vcenter ie-vcenter">
-                        <i class="fa fa-clock-o fa-2x"></i><div class="padding-left-xs inline-block">Active: {{ project.last_activity}}</div>
+                        <i class="fa fa-clock-o fa-2x"></i><div class="padding-left-xs inline-block">Last Active: {{ project.last_activity}}</div>
                     </div>
                 </div>
                 <div class="text-center padding-top-sm">
