--- a/templates/projects/blproject.html
+++ b/templates/projects/blproject.html
@@ -87,7 +87,8 @@
                 <a id="top5"></a>
                 <div class="row text-center padding-top-sm padding-bottom">
                     <div class="col-xs-12">
-                        <h2>Project Statistics</h2>
+                        <h2 class="remove-margin-bottom">Project Statistics</h2>
+                        <small>Updated daily</small>
                     </div>
                 </div>
                 
