--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -12,7 +12,7 @@
 <script src="{{url_for('static', filename="js/pybossa/pybossa.js")}}" type="text/javascript"></script>
 <script src="/static/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
     <div class="container-padded">
-        <div class="container container-padded">
+        <div class="container container-padded remove-padding-bottom">
         {% include "_flash_messages.html" %}
         {% if invite_new_volunteers %}
             <div class="row">
