--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -243,8 +243,8 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .arc.percent24:before{-moz-transform:skewX(-86.4deg);-webkit-transform:skewX(-86.4deg);-ms-transform:skewX(-86.4deg);-o-transform:skewX(-86.4deg);transform:skewX(-86.4deg);border: solid 10px #2FA92F;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;}
 .arc.percent25:before{-moz-transform:skewX(-90deg);-webkit-transform:skewX(-90deg);-ms-transform:skewX(-90deg);-o-transform:skewX(-90deg);transform:skewX(-90deg);border: solid 10px #2FA92F;-webkit-transition: border-color .2s linear;-moz-transition: border-color .2s linear;-ms-transition: border-color .2s linear;-o-transition: border-color .2s linear;transition: border-color .2s linear;}
 .blogpost img{max-width:100%;height:auto;}
-.blog-menu{margin-top: 20px;}
-.blog-menu .blog-menu-title{margin-bottom: 0;padding:5px 10px;font-weight:400;background-image:url(../img/patterns/brushed.png);text-transform:uppercase;}
+.blog-menu{margin-top: 20px}
+.blog-menu .blog-menu-title{text-align:center;margin-bottom: 0;padding:5px 10px;font-weight:400;background-image:url(../img/patterns/brushed.png);text-transform:uppercase;}
 .blog-menu .blog-menu-body{border:1px solid #E8E8E8;display:block;padding:10px}
 .blog-menu .blog-menu-body p{margin:0 0 10px}
 .blog-menu .blog-menu-body p:last-child{margin:0 auto}
@@ -421,6 +421,7 @@ body > footer .container{padding-left:20px;padding-right:20px}
 .text-center-xs{text-align:center}
 }
 @media (min-width: 768px) {
+.blog-menu{width:100%;float:left}
 #sticky-footer{height:100px}
 .cover-all{display:table;position:fixed;top:0;left:0;width:100%;height:100%;background:#fff;z-index:999999;}
 .form-horizontal .control-label{padding-top:13px}
@@ -440,6 +441,7 @@ body{font-size:16px}
 .bs-docs-sidenav{width:166px;margin-top:0}
 .well h3, .well .h3{font-size: 1em}
 #photo-container{margin-top:20px}
+#blog-menu-container{position:absolute;right:8.33333333%;width:25%}
 }
 @media (max-width: 991px) {
 #alert-row .alert{margin-top:20px}
@@ -470,6 +472,7 @@ body{padding-top:0}
 .text-center-sm{text-align:center}
 }
 @media (min-width: 992px) {
+#blog-menu-container{position:absolute;right:8.33333333%;width:16.66666667%}
 #photo-container{margin-top:60px}
 #alert-row{height:60px}
 #btn-group-cookies{padding-left:10px;display:inline-block}
