--- a/templates/blog/_helpers.html
+++ b/templates/blog/_helpers.html
@@ -1,5 +1,5 @@
 {% macro render_blog_post(current_user, blogpost, form) %}
-    <div class="col-xs-12 col-sm-7 col-sm-offset-1 col-sm-pull-3">
+    <div class="col-xs-12 col-sm-7 col-sm-offset-1">
         {% if blogpost %}
             <hr>
             <article class="blogpost">
@@ -69,18 +69,20 @@
 {% endmacro %}
 
 {% macro render_blog_menu(current_user, months) %}
-    <div class="col-xs-12 col-sm-3 col-md-offset-1 col-md-2 col-sm-push-8 blog-menu">
-        <p class="blog-menu-title inset-text-grey">Archive</p>
-        <div class="blog-menu-body">
-            {% for month in months %}
-            <p><a href="{{url_for('blog.monthly', month=month)}}">{{month}}</a></p>
-            {% endfor %}
+    <div id="blog-menu-container">
+        <div class="col-xs-12 col-sm-3 col-md-offset-1 col-md-2 blog-menu">
+            <p class="blog-menu-title inset-text-grey">Archive</p>
+            <div class="blog-menu-body">
+                {% for month in months %}
+                <p><a href="{{url_for('blog.monthly', month=month)}}">{{month}}</a></p>
+                {% endfor %}
+            </div>
         </div>
+        
+        {% if current_user.admin %}
+        <div class="col-xs-12 col-sm-3 col-md-offset-1 col-md-2 text-center padding-top-xs blog-menu">
+            <a href="{{ url_for('blog.new')}}" class="btn btn-danger">New Post</a>
+        </div>
+        {% endif %}
     </div>
-    
-    {% if current_user.admin %}
-    <div class="col-xs-12 col-sm-3 col-md-offset-1 col-md-2 text-center padding-top-sm">
-        <a href="{{ url_for('blog.new')}}" class="btn btn-danger">New Post</a>
-    </div>
-    {% endif %}
 {% endmacro %}
