--- a/templates/account/newsletter.html
+++ b/templates/account/newsletter.html
@@ -4,20 +4,23 @@
 
 {% block content %}
 
-<div class="row">
-
-	<div id="newsletter" class="col-md-9">
-		{% include "_flash_messages.html" %}
-		<h1>{{ _('Newsletter') }}</h1>
-        <p class="lead">{{_('If you want to be updated with our new features, projects, and
-        scientific projects, subscribe to our newsletter.')}}</p>
-        <a id="signmeup" class="btn btn-primary"
-            href="{{url_for('account.newsletter_subscribe', subscribe=True,
-            next=next)}}">{{_('Sign me up!')}}</a>
-        <a id="notinterested" class="btn btn-default" 
-            href="{{url_for('account.newsletter_subscribe', subscribe=False,
-            next=next)}}">{{_('Not interested')}}</a>
+<div class="container container-main">
+	<div class="row">
+		<div id="newsletter" class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+			{% include "_flash_messages.html" %}
+			<h1>Thanks for signing up!</h1>
+		<p class="lead">Before you get started, perhaps you would like to subscribe to our newsletter.</p>
+		<p class="lead">We'll update you every now and then with new features, developments, projects
+		and blog articles.</p>
+		<div class="pull-right" role="group">
+			<a id="notinterested" class="btn btn-default" 
+			    href="{{url_for('account.newsletter_subscribe', subscribe=False,
+			    next=next)}}">Leave me alone</a>
+			<a id="signmeup" class="btn btn-danger"
+			    href="{{url_for('account.newsletter_subscribe', subscribe=True,
+			    next=next)}}">Sure, sign me up</a>
+			</div>
+		</div>
 	</div>
-	
 </div>
 {% endblock %}
