--- a/templates/account/newsletter.html
+++ b/templates/account/newsletter.html
@@ -9,9 +9,8 @@
 		<div id="newsletter" class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 			{% include "_flash_messages.html" %}
 			<h1>Thanks for signing up!</h1>
-		<p class="lead">Before you get started, perhaps you would like to subscribe to our newsletter.</p>
-		<p class="lead">We'll update you every now and then with new features, developments, projects
-		and blog articles.</p>
+		<p class="lead">Before you get started, perhaps you would like to subscribe to our newsletter. We'll
+		update you from time to time with new features, developments, crowdsourcing prprojects and blog articles.</p>
 		<div class="pull-right" role="group">
 			<a id="notinterested" class="btn btn-default" 
 			    href="{{url_for('account.newsletter_subscribe', subscribe=False,
