--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -172,7 +172,7 @@ p.score{margin-top:-20px;font-size:1.8em}
 .pattern-white-wall-2x h1,.pattern-white-wall-2x h2,.pattern-white-wall-2x h3,.pattern-white-wall h1,.pattern-white-wall h2,.pattern-white-wall h3{color:#696969}
 .white-bg{background-color:#fff}
 .grey-bg{background-color:#FAFAFA}
-#i.fa-trophy{color:#FFC041}
+i.fa-trophy{color:#FFC041}
 i.fa-users{color:#CF60C9}
 i.fa-tasks{color:#3A7BD2}
 i.fa-clock-o{color:#54BBBB}
