Update url route for new discourse module

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -37,7 +37,7 @@
                     <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> {{ _('Admin') }}</a></li>
                     {% endif %}
                     <li class="divider"></li>
-                  <li class="nav-link"><a href="{{ url_for('blplugin.signout') }}"><i class="fa fa-power-off"></i> {{ _('Sign Out') }}</a></li>
+                  <li class="nav-link"><a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> {{ _('Sign Out') }}</a></li>
                 </ul>
               </li>
             </ul>
