--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -23,7 +23,7 @@
                 it can be used without any copyright restrictions.</p>
                 <p class="lead"> We at <a href="http://labs.bl.uk/" target="_blank">BL Labs</a> are very keen for these materials to be used in innovative ways to further research into new technologies.
                 The digitised catalogue cards used in Convert-a-Card for instance might prove useful for testing pattern recognition applications such as multi-lingual and hand-writing OCR technologies,
-                or even new approaches to crowdsourcing transcription! Visit the <a href="http://community.libcrowds.com">LibCrowds Community</a> if you have any further enquiries, or would simply like
+                or even new approaches to crowdsourcing transcription! Visit the <a href="{{url_for('discourse.index')}}">LibCrowds Community</a> if you have any further enquiries, or would simply like
                 to tell us about how you've made use of the data.</p>
                 <p class="lead">The open datasets provided on this page are updated several times an hour.</p>
             </div>
