--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -70,7 +70,7 @@
             <div class="col-md-11 padding-top-xs padding-bottom-sm">
                 <h2>{{ _('Contact information') }}</h2>
                 <ul>
-                    <li>Visit the <a href="http://community.libcrowds.com">LibCrowds Community</a> for more information or to report any issues.</li>
+                    <li>Visit the <a href="{{url_for('discourse.index')}}">LibCrowds Community</a> for more information or to report any issues.</li>
                     <li>Alternatively, you can email <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>         
                 </ul>
             </div>
