--- a/templates/projects/snippets/cards.html
+++ b/templates/projects/snippets/cards.html
@@ -34,7 +34,7 @@
         <div id="error" class="alert alert-danger remove-margin-bottom" style="display:none;">
            <a class="close">x</a>
            <strong>Error!</strong> Something went wrong, please report this via the 
-           <a href="http://community.libcrowds.com">LibCrowds Community</a>
+           <a href="{{url_for('discourse.index')}}">LibCrowds Community</a>
         </div>
         <div id="search_error" class="alert alert-info remove-margin-bottom" style="display:none;">
            <a class="close">x</a>
