--- a/templates/401.html
+++ b/templates/401.html
@@ -6,8 +6,11 @@
         <div class="container container-padded">
             {% include "_flash_messages.html" %}
             <div class="col-md-12">
-                <h1><strong>Unauthorized</strong></h1>
+                <h1>Unauthorized</h1>
                 <p class="lead">You are not authorized to access the URL requested.</p>
+                <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse"> 
+                    <i class="glyphicon glyphicon-home"></i> Go Home
+                </a>
             </div>
         </div>
     </div>
