Small change in wording

--- a/templates/stats/blglobal.html
+++ b/templates/stats/blglobal.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="col-sm-4 col-xs-12 padding-bottom-sm">
                         <div class="white-rounded inset-shadow-white chart same-size">
-                            <h4 class="text-center padding-bottom-sm">Top 10 Percent</h4>
+                            <h4 class="text-center padding-bottom-sm">Most Active 10%</h4>
                             <div id="top-10-percent-chart">
                                 <canvas id="top-10-percent" width="500" height="500"></canvas>
                                 <div id="top-10-percent-legend" class="padding-top-sm legend">
@@ -241,7 +241,7 @@ $(function(){
                 label1 += "s";
             }
             
-            var label2 = "Top 10% : " + top10Percent + " task";
+            var label2 = "Most Active 10% : " + top10Percent + " task";
             if (top10Percent != 1) {
                 label2 += "s";
             }
