Update automated email text

--- a/templates/account/email/forgot_password.html
+++ b/templates/account/email/forgot_password.html
@@ -1,18 +1,13 @@
 <p>Hello {{ user.fullname }},</p>
 
-<p>We received a request to reset your password at {{ config.BRAND }}.</p>
-
-<p>If you did not make this request please ignore this email.</p>
-
-<p>To reset your password, please visit the URL below:</p>
+<p>To reset your {{ config.BRAND }} password, please visit the URL below:</p>
 
 <p><a href="{{ recovery_url }}">{{ recovery_url }}</a></p>
 
-<p>Regards,
-</p>
-<p>{{ config.BRAND }} Team
-</p>
+<p>If you did not make a password reset request, please ignore this email.</p>
+
+<p>Regards,<br />
+{{ config.BRAND }} Team</p>
+
 <hr>
-<p>Powered by <a href="http://pybossa.com">PyBossa</a></p>
-<p>Follow us: <a href="http://twitter.com/pybossa">Twitter</a>, <a
-    href="https://plus.google.com/115359083217638640334/posts">Google+</a></p>
+<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
