--- a/templates/account/email/forgot_password_openid.html
+++ b/templates/account/email/forgot_password_openid.html
@@ -8,10 +8,8 @@
 the same account to sign-in again. If you forgot the password to your {{ account_name }}
 account, please contact {{ account_name }}.
 </p>
-<p>Regards,</p>
-<p>{{ config.BRAND }} Team</p>
+<p>Regards,<br />
+{{ config.BRAND }} Team</p>
 
 <hr>
-<p>Powered by <a href="http://pybossa.com">PyBossa</a></p>
-<p>Follow us: <a href="http://twitter.com/pybossa">Twitter</a>, <a
-    href="https://plus.google.com/115359083217638640334/posts">Google+</a></p>
+<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
