--- a/templates/account/email/inactive_project.html
+++ b/templates/account/email/inactive_project.html
@@ -6,11 +6,10 @@
 </p>
 <p>If at the end the project is deleted, we will send you a ZIP file where you can download your project.
 </p>
-<p>All the best,
+
+<p>All the best,<br />
+{{ BRAND }} Team
 </p>
-<p>{{ BRAND }} Team
-</p>
+
 <hr>
-<p>Powered by <a href="http://pybossa.com">PyBossa</a></p>
-<p>Follow us: <a href="http://twitter.com/pybossa">Twitter</a>, <a
-    href="https://plus.google.com/115359083217638640334/posts">Google+</a></p>
+<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
