--- a/templates/account/email/validate_email.html
+++ b/templates/account/email/validate_email.html
@@ -1,6 +1,6 @@
 <p>Hello {{ user['fullname'] }},
 </p>
-<p>You have updated your email's account in {{ config.BRAND }}.
+<p>You have updated your email at {{ config.BRAND }}.
 </p>
 <p>To verify that you are the owner of this e-mail address, please visit the URL below:
 </p>
@@ -11,6 +11,4 @@
 <p>{{ config.BRAND }} Team
 </p>
 <hr>
-<p>Powered by <a href="http://pybossa.com">PyBossa</a></p>
-<p>Follow us: <a href="http://twitter.com/pybossa">Twitter</a>, <a
-    href="https://plus.google.com/115359083217638640334/posts">Google+</a></p>
+<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
