--- a/templates/account/email/inactive.html
+++ b/templates/account/email/inactive.html
@@ -1,6 +1,8 @@
 <p>Hi, {{ user['fullname']}}!
 </p>
-<p>We notice you haven’t been around {{config.BRAND}} for more than three months. We would like to encourage you to visit us again and continue collaborating with us. We hope not to bother you with this email- we’re just trying to make you not forget about us.
+<p>We notice you haven’t been around {{config.BRAND}} for more than three months.
+We would like to encourage you to visit us again and continue collaborating with us.
+We hope not to bother you with this email- we’re just trying to make you not forget about us.
 </p>
 <p>In any case, thank you for your contribution so far.
 </p>
@@ -10,6 +12,5 @@
 </p>
 <hr>
 <p><a href="{{url_for('account.update_profile', name=user['name'], _external=True)}}">Update your notifications preferences</a></p>
-<p>Powered by <a href="http://pybossa.com">PyBossa</a></p>
-<p>Follow us: <a href="http://twitter.com/pybossa">Twitter</a>, <a
-    href="https://plus.google.com/115359083217638640334/posts">Google+</a></p>
+<hr>
+<p><a href="http://twitter.com/LibCrowds">Follow us on Twitter</a></p>
