Update about page wording

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -50,9 +50,8 @@
                 <h2>{{ _('Technology') }}</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
-                crowdsourcing projects. To complement the PyBossa framework, custom Flask
-                <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugins</a> are used to handle certain {{brand}} specific
-                features. The {{brand}} <a href="https://github.com/alexandermendes/libcrowds-pybossa-theme" target="_blank">theme</a> is written primarily
+                crowdsourcing projects. To complement the PyBossa framework, custom Flask plugins are used to handle certain {{brand}} specific
+                features. The <a href="https://github.com/alexandermendes/libcrowds-pybossa-theme" target="_blank">{{brand}} theme</a> is written primarily
                 in HTML5, CSS3 and JavaScript, as are the individual crowdsourcing projects. Everything developed for the LibCrowds platform
 		is open-source and <a href="https://github.com/LibCrowds" target="_blank">available at GitHub</a>.</p>
             
