--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -12,7 +12,7 @@
 
 <div class="container-padded remove-padding-bottom">
     <section class="mid-grey pattern-brushed padding-bottom-sm">
-        <div class="container container-padded">
+        <div class="container padding-top">
             {% include "_flash_messages.html" %}
             <div class="row margin-bottom">
                 <div class="col-sm-6 col-xs-12 text-center">
@@ -24,7 +24,7 @@
                                     {{ helper.render_user_thumbnail(current_user, upload_method, class="img-circle profile-image img-responsive center-block", size='200x200')}}
                                 </div>
                                 <div class="img-overlay img-circle edit-profile-image">
-                                    <i class="fa fa-pencil-square-o fa-4x"></i>
+                                    <i class="fa fa-pencil-square-o fa-3x"></i>
                                     <span>Edit</span>
                                 </div>
                             </div>
