Updates to profile page design

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -176,7 +176,7 @@ i.fa-trophy{color:#FFC041}
 i.fa-users{color:#CF60C9}
 i.fa-tasks{color:#3A7BD2}
 i.fa-clock-o{color:#54BBBB}
-article.blogpost small i.fa,user-info i.fa{color:#666}
+article.blogpost small i.fa,.user-info i.fa{color:#666}
 article.blogpost img{border:solid 1px #eee}
 i.fa-check-square-o{color:#15b592}
 h1 i,h2 i,h3 i{padding-right:10px}
