--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,11 @@
         </footer>
       </div>
         
-      {% if current_user.is_authenticated() and not current_user.info.avatar%}
-        <script>$.ajax('/api/user/set_default_avatar');</script>
+      {% if current_user.is_authenticated() %}
+        <script>$.ajax('/api/discourse/badges/trigger');</script>
+        {% if not current_user.info.avatar %}
+          <script>$.ajax('/api/user/set_default_avatar');</script>
+        {% endif %}
       {% endif %}
       {% if not preload_js == "true" %}
         {% assets "js_top" %}
